--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,8 @@ jobs:
           [
             { name: "linux", image: "ubuntu-latest" },
             { name: "windows", image: "windows-latest" },
+            # { name: "macos", image: "macos-latest" },
+            # { name: "macos-intel", image: "macos-13" },
           ]
     runs-on: ${{ matrix.os.image }}
     steps:
