--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "lint": "eslint --ext .ts,.tsx .",
+    "format:check": "pnpm prettier --check .",
+    "format:fix": "pnpm prettier --write ."
   },
   "repository": {
     "type": "git",
